added re-posts and theme-settings

--- a/app/views/companies/list.html.erb
+++ b/app/views/companies/list.html.erb
@@ -1,7 +1,7 @@
 <h3> Companies </h3>
 
 <%= turbo_stream_from "companies" %>
-<div id="companies" class='d-flex justify-content-center align-items-center'>
+<div id="companies" class='d-flex justify-content-center align-items-center posts'>
   <div class='company-list'>
     <%= render @companies %>
   </div>
