--- a/app/views/searches/_company_results.html.erb
+++ b/app/views/searches/_company_results.html.erb
@@ -1,6 +1,6 @@
 <div class="list-group">
   <% companies.each do |company| %>
-    <%= link_to show_company_path(id: company.id), class:"list-group-item list-group-item-action mb-4", style:'color:black; text-decoration: none' do %>
+    <%= link_to show_company_path(id: company.id), class:"list-group-item list-group-item-action mb-4 post" do %>
       <div class='row'>
         <div class='col-md-3'>
         <%= image_tag(company.logo, class:'small-circle-photo') if company.logo.present? %>
