--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,7 +123,7 @@ commentss{
   border-radius: 5px;
  }
 .flickr_pagination .disabled {
-  color: #575555; 
+  color: #716f6f; 
 }
 .flickr_pagination .current {
   font-style: normal;
@@ -131,7 +131,7 @@ commentss{
   color: #ff0084; 
 }
 .flickr_pagination a {
-  border: 1px solid rgb(1, 57, 177);
+  border: 1px solid #ff0084;
   color: rgb(0,0,0);
   text-decoration: none; 
 }
@@ -210,4 +210,49 @@ commentss{
 }
 .cancel-button:hover {
   background-color: #2640fe;
+}
+
+light-theme{
+  padding-top: 10px;
+  width: 950px;
+}
+.light-sidepanel{
+  padding-top: 2%;
+  width: 15%;
+  float: left;
+  height: 100%;
+  background-color: gainsboro;
+}
+.light-mainpanel{
+  padding-top: 2%;
+  width: 85%;
+  float: right;
+  height: 870px;
+  padding-left: 20px;
+  background-color: white;
+  overflow-y: auto;
+  border-radius: 30px;
+}
+dark-theme{
+  padding-top: 10px;
+  width: 950px;
+}
+.dark-sidepanel{
+  padding-top: 2%;
+  width: 15%;
+  float: left;
+  height:100%;
+  color: white;
+  background-color: black;
+}
+.dark-mainpanel{
+  padding-top: 2%;
+  width: 85%;
+  float: right;
+  height: 870px;
+  padding-left: 20px;
+  color: white;
+  background-color:#2f2e2e;
+  overflow-y: auto;
+  border-radius: 30px;
 }
