--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -1,6 +1,6 @@
 <div class="list-group col-md-12">
-  <div class="company-<%= company.user_id %> list-group-item list group-item-action mt-2 mb-3">
-    <%= link_to show_company_path(id: company.id), class:"mb-4", style:'color:black; text-decoration: none' do %>
+  <div class="company-<%= company.user_id %> list-group-item list group-item-action mt-2 mb-3 post">
+    <%= link_to show_company_path(id: company.id), class:"mb-4 post" do %>
       <div class="row company-<%= company.user_id %>">
         <div class='col-md-2'>
         <%= image_tag(company.logo, class:'small-circle-photo') if company.logo.present? %>
