--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,5 +1,5 @@
 <div class="list-group col-md-6">
-  <%= link_to show_job_path(id: job.id), class:"list-group-item list-group-item-action mb-4", style:'color:black; text-decoration: none' do %>
+  <%= link_to show_job_path(id: job.id), class:"list-group-item list-group-item-action mb-4 post" do %>
     <div class='row'>
       <div class="d-flex justify-content-between mb-2 col-md-2">
         <%= image_tag(job.photo, class:'small-circle-photo') if job.photo.present? %>
