--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,5 +1,5 @@
 <div class='d-flex justify-content-center'>
-  <div class="card col-md-8 mt-4 mb-4">
+  <div class="card col-md-8 mt-4 mb-4 post">
     <div class="card-header text-center">
       <h2> <%= image_tag(@company.logo, class:'circle-photo') if @company.logo.present?%> </h2>
       <h2> <%= @company.name %> </h2>
