--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,27 +25,55 @@
         }
       </style>
     <% end %>
+    <% if Current.user.settings.first.theme == "dark"%>
+      <style>
+        .sidepanel-text{
+          color: white;
+          text-decoration: none;
+        }
+        .post{
+          color: white;
+          background-color: black;
+          text-decoration: none;
+        }
+        .home{
+          background-color: darkgray;
+        }
+      </style>
+    <% else %>
+      <style>
+        .sidepanel-text{
+          color: black;
+          text-decoration: none;
+        }
+        .post{
+          background-color: gainsboro;
+          text-decoration: none;
+        }
+      </style>
+    <% end %>
   </head>
 
+  <% if Current.user.present? && Current.user.settings.first.theme == "light"%>
   <body style='background-color: gainsboro; padding-bottom: 90px'>
     <%= render 'layouts/navbar' %>
-    <% if request.fullpath.split('/').blank? %>    
-      <div class='d-flex justify-content-center' style='background-color: white'>
-        <div class='col-md-4'>
-          <%= render 'layouts/flash'  %>
-          <%= turbo_frame_tag "modal" %>
+    <% if request.fullpath.split('/').blank? %> 
+      <div class='d-flex justify-content-center' style='background-color: white'> 
+        <div class='col-md-4'> 
+          <%= render 'layouts/flash'  %> 
+          <%= turbo_frame_tag "modal" %> 
           <%= yield %>
         </div>
       </div>
     <% else %> 
       <div class='d-flex justify-content-center'>
-        <div class='col-md-11 panel'>
-          <div class='panel-left'>  <%= render 'layouts/side_panel' %> </div>
-          <div class='panel-right'> <%= render 'layouts/flash'  %> 
+        <div class='col-md-11 light-theme'>
+          <div class='light-sidepanel'>  <%= render 'layouts/side_panel' %> </div>
+          <div class='light-mainpanel'> <%= render 'layouts/flash'  %> 
             <%= turbo_frame_tag "modal" %> 
             <%= yield %> 
           </div>
-        </div>
+        </div> 
       </div>
     <% end %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -57,4 +85,36 @@
       });
     </script>
   </body>
+  <% else %>
+    <body style='background-color: black; padding-bottom: 90px'>
+      <%= render 'layouts/navbar' %>
+      <% if request.fullpath.split('/').blank? %> 
+        <div class='d-flex justify-content-center home'> 
+          <div class='col-md-4'> 
+            <%= render 'layouts/flash'  %> 
+            <%= turbo_frame_tag "modal" %> 
+            <%= yield %>
+          </div>
+        </div>
+      <% else %> 
+        <div class='d-flex justify-content-center'>
+          <div class='col-md-11 dark-theme'>
+            <div class='dark-sidepanel' style='color: white'>  <%= render 'layouts/side_panel' %> </div>
+            <div class='dark-mainpanel'> <%= render 'layouts/flash'  %> 
+              <%= turbo_frame_tag "modal" %> 
+              <%= yield %> 
+            </div>
+          </div> 
+        </div>
+      <% end %>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init({
+          duration: 3000,
+          once: true,
+        });
+      </script>
+    </body>
+  <% end %>
 </html>
