--- a/app/views/posts/list.html.erb
+++ b/app/views/posts/list.html.erb
@@ -3,30 +3,32 @@
   <% @posts.each do |post| %>
     <div class='row mb-3'>
       <div class='col-md-4'></div>
-      <div class="card col-md-4">
+      <div class="card col-md-4 post">
         <%= image_tag(post.image, style:'height:450px; padding-top:10px') if post.image.present? %>
         <div class="card-body">
-          <h5 class="card-title"> <%= post.title %> <small> <small> ~ <%= User.find(post.user_id).name %> </small> </small> </h5>
+          <h5 class="card-title"> 
+            <%= link_to post.title, show_post_path(id: post.id), class:'post' %> <small> <small> ~ <%= User.find(post.user_id).name %> </small> </small> 
+          </h5>
           <p class="card-text" style='text-align: justify'> <%= post.body if post.body.present?%> </p>
         </div>
         <hr>
         <p style='padding-left:20px'>
           <% if Current.user.already_liked?(post.id) %>
-            <%= link_to unlike_path(id: post.id), data:{turbo_method: :delete}, style:'text-decoration: none; color: black' do %>
+            <%= link_to unlike_path(id: post.id), data:{turbo_method: :delete}, class:'sidepanel-text' do %>
               <%= fa_icon 'heart', style:'color:red' %> 
-            <% end%>
-          <% else %>
-            <%= link_to like_path(id: post.id), data:{turbo_method: :post}, style:'text-decoration: none; color: black' do %>
-              <%= fa_icon 'heart-o' %>
-            <% end %>
-          <% end %>
+            <% end%> 
+          <% else %> 
+            <%= link_to like_path(id: post.id), data:{turbo_method: :post}, class:'sidepanel-text' do %> 
+              <%= fa_icon 'heart-o' %> 
+            <% end %> 
+          <% end %> 
           &nbsp &nbsp 
-          <%= link_to list_comments_path(id: post.id), style:'text-decoration: none; color: black' do %>
+          <%= link_to list_comments_path(id: post.id), class:'sidepanel-text' do %> 
             <%= fa_icon 'comment-o' %> 
-          <% end %>
+          <% end %> 
           &nbsp &nbsp 
-          <%= link_to "#", style:'text-decoration: none; color: black' do %>
-            <%= fa_icon 'share' %>
+          <%= link_to repost_path(id: post.id), data:{turbo_method: :post}, class:'sidepanel-text' do %>
+            <%= fa_icon 'refresh' %>
           <% end %>
         </p>
       </div>
