--- a/app/views/searches/_job_results.html.erb
+++ b/app/views/searches/_job_results.html.erb
@@ -1,6 +1,6 @@
 <div class='list-group'>
   <% jobs.each do |job| %>
-    <%= link_to show_job_path(id: job.id), class:'list-group-item list-group-action-item mt-4', style:'color: black; text-decoration:none' do %>
+    <%= link_to show_job_path(id: job.id), class:'list-group-item list-group-action-item mt-4 post' do %>
       <div class='row'>
         <div class='col-md-3'>
           <%= image_tag(job.photo, class:'small-circle-photo') if job.photo.present? %>
