--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,6 +1,10 @@
 <h4> Academic Profile </h4>
 
-<div class="card col-md-10">
+<% if Current.user.settings.first.theme == "dark" %>
+<div class="card col-md-10 bg-dark">
+<% else %>
+  <div class='card col-md-10 bg-light'>
+<% end %>
   <div class="card-header text-center">
     <h4> <%= @profile.level %> - <%= @profile.qualification %> </h4>
   </div>
