--- a/app/views/enlistments/list.html.erb
+++ b/app/views/enlistments/list.html.erb
@@ -1,4 +1,4 @@
-<h3> You Applications </h3>
+<h3> Your Applications </h3>
 
 <%= turbo_stream_from "enlistments" %>
 <div class='col-md-4' id='enlistments'>
