--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,11 +10,11 @@
 <p class='text-center'>
   Looking for employees? You've come to the right place.
 </p>
-<p class='text-center'>
+<p class='text-center' style="padding-bottom:100px">
   <% if !Current.user.present? %>
     <%= link_to 'Sign Up', new_user_path,    class:'btn col-4', style:'background-color: gainsboro' %>
     <%= link_to 'Sign In', new_session_path, class:'btn btn-outline-dark col-3' %>
-    <%= link_to 'Register a Company', new_company_user_path, class:'btn col-4', style:'background-color: gainsboro; color:gainsboro' %>
+    <%= link_to 'Register a Company', new_company_user_path, class:'btn col-4', style:'background-color: gainsboro;' %>
   <% else %>
     <%= link_to 'Job Feed', list_jobs_path, class:'btn col-4', style:'background-color: gainsboro' %>
   <% end %>
