--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -5,7 +5,7 @@
         <div class='col-md-2'>
         <%= image_tag(company.logo, class:'small-circle-photo') if company.logo.present? %>
         </div>
-        <div class="d-flex justify-content-between mb-2 col-md-8">
+        <div class="d-flex justify-content-between mb-2 col-md-8 post">
           <div class='row'>
             <div class='col-md-12'>
               <h6> <%= company.name %> </h6>
