--- a/app/views/enlistments/review.html.erb
+++ b/app/views/enlistments/review.html.erb
@@ -15,6 +15,11 @@
         <p> years of experience:  </p>
         <p style="text-align: justify"> <%= @applicant.cover_letter %> </p>
       </div>
+      <div class="mb-2">
+        <% if @profile.present? && @profile.cv.present? %>
+          <%= link_to "CV of #{ @applicant.name }", url_for(@profile.cv), class:'sidepanel-text' %>
+        <% end %>
+      </div>
       <% if @enlistment.status != "interview" && @enlistment.status != "rejected" %>
         <%= link_to "Invite For Interview", invite_for_interview_path(id: @enlistment.id), data:{turbo_method: :post, turbo_confirm: "Invite #{@applicant.name} for interview"}, class:'btn btn-success mt-4' %>
         <div class='col-md-4 '></div>
@@ -28,8 +33,10 @@
         <%= link_to "Reconsider", reconsider_applicant_path(id: @enlistment.id), data:{turbo_method: :post, turbo_confirm: "Set this status to pending"}, class:'btn btn-dark' %>
       <% end %>
       <p class='text-center'>
-        <%= link_to "Cancel", show_company_path(id: @company.id), class:"btn btn-secondary mt-4 col-md-2" %>
+        <%= link_to "Back", show_company_path(id: @company.id), class:"btn btn-secondary mt-4 col-md-2" %>
       </p>
     </div>
   </div>
 </div>
+
+ 
