--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
         }
       </style>
     <% end %>
-    <% if Current.user.settings.first.theme == "dark"%>
+
+    <% if Current.user.present? && Current.user.settings.first.theme == "dark"%>
       <style>
         .sidepanel-text{
           color: white;
@@ -54,42 +55,43 @@
     <% end %>
   </head>
 
-  <% if Current.user.present? && Current.user.settings.first.theme == "light"%>
-  <body style='background-color: gainsboro; padding-bottom: 90px'>
-    <%= render 'layouts/navbar' %>
-    <% if request.fullpath.split('/').blank? %> 
-      <div class='d-flex justify-content-center' style='background-color: white'> 
-        <div class='col-md-4'> 
-          <%= render 'layouts/flash'  %> 
-          <%= turbo_frame_tag "modal" %> 
-          <%= yield %>
-        </div>
-      </div>
-    <% else %> 
-      <div class='d-flex justify-content-center'>
-        <div class='col-md-11 light-theme'>
-          <div class='light-sidepanel'>  <%= render 'layouts/side_panel' %> </div>
-          <div class='light-mainpanel'> <%= render 'layouts/flash'  %> 
-            <%= turbo_frame_tag "modal" %> 
-            <%= yield %> 
-          </div>
-        </div> 
-      </div>
-    <% end %>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        duration: 3000,
-        once: true,
-      });
-    </script>
-  </body>
-  <% else %>
-    <body style='background-color: black; padding-bottom: 90px'>
+  <% if Current.user.present? && Current.user.settings.first.theme == "dark"%>
+    <body style='background-color: black;'>
       <%= render 'layouts/navbar' %>
       <% if request.fullpath.split('/').blank? %> 
         <div class='d-flex justify-content-center home'> 
+          <div class='col-md-4'> 
+            <%= render 'layouts/flash'  %> 
+            <%= turbo_frame_tag "modal" %> 
+            <%= yield %> 
+          </div> 
+        </div> 
+      <% else %> 
+        <div class='d-flex justify-content-center'> 
+          <div class='col-md-11 dark-theme'> 
+            <div class='dark-sidepanel' style='color: white'>  <%= render 'layouts/side_panel' %> </div> 
+            <div class='dark-mainpanel'> <%= render 'layouts/flash'  %> 
+              <%= turbo_frame_tag "modal" %> 
+              <%= yield %> 
+            </div> 
+          </div> 
+        </div>
+      <% end %>
+      <%= render 'layouts/footer' %>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init({
+          duration: 3000,
+          once: true,
+        });
+      </script>
+    </body>
+  <% else %>
+    <body style='background-color: gainsboro;'>
+      <%= render 'layouts/navbar' %>
+      <% if request.fullpath.split('/').blank? %> 
+        <div class='d-flex justify-content-center' style='background-color: white'> 
           <div class='col-md-4'> 
             <%= render 'layouts/flash'  %> 
             <%= turbo_frame_tag "modal" %> 
@@ -98,9 +100,9 @@
         </div>
       <% else %> 
         <div class='d-flex justify-content-center'>
-          <div class='col-md-11 dark-theme'>
-            <div class='dark-sidepanel' style='color: white'>  <%= render 'layouts/side_panel' %> </div>
-            <div class='dark-mainpanel'> <%= render 'layouts/flash'  %> 
+          <div class='col-md-11 light-theme'>
+            <div class='light-sidepanel'>  <%= render 'layouts/side_panel' %> </div>
+            <div class='light-mainpanel'> <%= render 'layouts/flash'  %> 
               <%= turbo_frame_tag "modal" %> 
               <%= yield %> 
             </div>
@@ -115,6 +117,7 @@
           once: true,
         });
       </script>
+      <%= render 'layouts/footer' %>
     </body>
   <% end %>
 </html>
